/update Testing on controller for API